--- a/serverless.yml
+++ b/serverless.yml
@@ -35,6 +35,14 @@ functions:
           method: GET
           cors: true
 
+  getAuctionById:
+    handler: src/handlers/getAuctionById.handler
+    events:
+      - http:
+          path: /auctions/{id}
+          method: GET
+          cors: true
+
 resources:
   Resources:
     AuctionsTable: ${file(resources/AuctionsTable.yml):AuctionsTable}
